Improves size requests for HTTP-URLs * Uses HEAD request instead of GET * Disconnects afterwards * Uses long instead of int